k8s/hello-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloweb
  name: helloweb-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloweb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: helloweb
      name: helloweb
    spec:
      containers:
      - image: opsmx11/helloweb:latest
        imagePullPolicy: Always
        name: helloweb
      restartPolicy: Always
      securityContext: {}
