k8s/hello-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloweb
  name: helloweb-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloweb
  sessionAffinity: None
